# mua

./: .busted  .clang-format  .clang-tidy  .gitignore  .luacheckrc  .styluaignore  Brewfile  CLAUDE.md  CMakeLists.txt  Makefile  NOTICE  README.md
cmake/: Warnings.cmake  versiondef.h.in
docs/: agent-milestone.md  api-bridge.md
runtime/lua/mua/: init.lua
src/cjson/: README.md
src/mua/: agent.c  agent.h  autocmd.c  autocmd.h  http.c  http.h  json.c  json.h  log.c  log.h  loop.c  loop.h  main.c  memory.c  memory.h  msgpack.c  msgpack.h  options.c  options.h  paths.c  paths.h  render.c  render.h  rpc.c  rpc.h  session.c  session.h  sse.c  sse.h  tools.c  tools.h  variables.c  variables.h
src/mua/api/: dispatch.c  dispatch.h  global.c  global.h  session.c  session.h
src/mua/api/private/: defs.h  helpers.c  helpers.h
src/mua/lua/: autocmd.h  bridge.c  bridge.h  ref.h  state.c  state.h  tool.h
src/mua/provider/: models.c  models.h  openrouter.c  openrouter.h  openrouter_internal.h
test/functional/: agent_spec.lua  autocmd_spec.lua  embed_spec.lua  helpers.lua  markdown_spec.lua  model_switch_spec.lua  opts_spec.lua  prompt_spec.lua  resume_spec.lua  session_spec.lua  startup_spec.lua  stream_spec.lua  tools_spec.lua  userprompt_spec.lua  vars_spec.lua  version_spec.lua
test/functional/fixtures/: sse_server.c
test/functional/fixtures/autocmd/: init.lua
test/functional/fixtures/autocmd_approve/: init.lua
test/functional/fixtures/autocmd_rewrite/: init.lua
test/functional/fixtures/autocmd_throw/: init.lua
test/functional/fixtures/broken/: init.lua
test/functional/fixtures/embed/: init.lua
test/functional/fixtures/hello/: init.lua
test/functional/fixtures/markdown_config/: init.lua
test/functional/fixtures/model_switch/: init.lua
test/functional/fixtures/opts_load/: init.lua
test/functional/fixtures/opts_model/: init.lua
test/functional/fixtures/opts_sp_omit/: init.lua
test/functional/fixtures/opts_sp_set/: init.lua
test/functional/fixtures/opts_stepcap/: init.lua
test/functional/fixtures/opts_unknown/: init.lua
test/functional/fixtures/session/: init.lua
test/functional/fixtures/tools_register/: init.lua
test/functional/fixtures/userprompt/: init.lua
test/functional/fixtures/vars_cycle/: init.lua
test/functional/fixtures/vars_load/: init.lua
test/functional/fixtures/vars_mixed/: init.lua
test/unit/: agent_spec.lua  autocmd_spec.lua  defs_spec.lua  helpers.lua  http_spec.lua  json_spec.lua  loop_spec.lua  marshal_spec.lua  memory_spec.lua  models_spec.lua  msgpack_spec.lua  openrouter_spec.lua  options_spec.lua  paths_spec.lua  render_spec.lua  session_spec.lua  sse_spec.lua  tools_spec.lua  variables_spec.lua
